// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Child
            </title>
            <path
              d="M14.71 6.71c-.39-.39-1.02-.39-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Child
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Grandchild
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> LongList story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 9
            </title>
            <path
              d="M14.71 6.71c-.39-.39-1.02-.39-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Parent
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 3
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 4
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 5
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 6
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 7
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 8
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 9
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 10
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> LongText story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
            </title>
            <path
              d="M14.71 6.71c-.39-.39-1.02-.39-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> LongTextCustomSeparator story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
            </title>
            <path
              d="M14.71 6.71c-.39-.39-1.02-.39-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> OneCrumb story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> TwoCrumbs story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 1
            </title>
            <path
              d="M14.71 6.71c-.39-.39-1.02-.39-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;
